# nengo

./: .appveyor.yml  .buildinfo  .codecov.yml  .coveragerc  .gitignore  .gitlint  .gitmodules  .mention-bot  .nengobones.yml  .pre-commit-config.yaml  .project  .pydevproject  .pylintrc  .travis.yml  404.html  CHANGES.rst  CITATION.rst  CONTRIBUTING.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  advanced.html  appveyor.yml  backend-api.html  changelog.html  citation.html  config.html  conftest.py  connections.html  contributing.html  converter.py  converting.html  examples.html  ez_setup.py  frontend-api.html  genindex.html  (+43 more)
.ci/: common.sh  conda.sh  coverage.sh  coverage.sh.template  deploy.sh  docs.sh  static.sh  test.sh
.doctrees/: advanced.doctree  backend-api.doctree  changelog.doctree  citation.doctree  config.doctree  connections.doctree  contributing.doctree  frontend-api.doctree  getting-started.doctree  improving-performance.doctree  license.doctree  nengorc.doctree  networks.doctree  user-guide.doctree  utils.doctree
.github/: pull_request_template.md
.templates/: .pre-commit-config.yaml.template  LICENSE.rst.template  LICENSE.rst.template.ext  coverage.sh.template  pyproject.toml.template
_images/: inheritance-47436b5f83567651f4c8f6967a4351f2ed9adcfd.png.map
_sources/: connections.rst.txt  getting-started.rst.txt  networks.rst.txt
_static/: documentation_options.js
benchmarks/: cache.ipynb
docs/: Makefile  advanced.rst  advanced_examples.rst  all_examples.rst  architecture.rst  backend-api.rst  backend_api.rst  conf.py  (+45 more)
(+1880 files in other folders)
