[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nengo"
dynamic = ["version"]
description = "Tools for building and simulating large-scale neural models"
readme = "README.rst"
authors = [{ name = "Applied Brain Research", email = "info@appliedbrainresearch.com" }]
requires-python = ">=3.5"
dependencies = [
    "numpy>=1.13,<=2.2.5"
]

[project.license]
file = "LICENSE.rst"

[project.urls]
Homepage = "https://www.nengo.ai/nengo"

[project.optional-dependencies]
all = [
    "sphinx>=1.8",
    "jupyter",
    "matplotlib>=1.4",
    "nbsphinx",
    "numpydoc>=0.6",
    "nengo_sphinx_theme>=1.2.0",
    "scipy>=0.13,<1.14.0",
    "scikit-learn",
    "pytest>=3.6",
    "pytest-allclose",
    "pytest-plt",
    "pytest-rng"
]
docs = [
    "sphinx>=1.8",
    "jupyter",
    "matplotlib>=1.4",
    "nbsphinx",
    "numpydoc>=0.6",
    "nengo_sphinx_theme>=1.2.0"
]
optional = [
    "scipy>=0.13,<=1.15.2",
    "scikit-learn"
]
tests = [
    "jupyter",
    "matplotlib>=1.4",
    "pytest>=3.6",
    "pytest-allclose",
    "pytest-plt",
    "pytest-rng",
    "tomli; python_version < '3.11'",
]

[project.entry-points."nengo.backends"]
reference = "nengo:Simulator"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["nengo._vendor"]

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.package-data]
nengo = ["nengo-data/nengorc"]

[tool.setuptools.dynamic]
version = { attr = "nengo.version.version" }
